--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,17 +62,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha04'
     // Add Jsoup
     implementation("org.jsoup:jsoup:1.13.1")
-    /*
-    // Coroutines cash
-    implementation "com.github.diefferson:CoroutinesCache:0.2.3"
-    // Coroutines adapter
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-    // for android X
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
-    // lib for circle indicator
-    implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.3.0'
-    // pull to refresh
-    implementation 'com.dinuscxj:recyclerrefreshlayout:2.0.5'
+    // Navi component
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 
-     */
 }
